<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/question_headline"
        android:background="@android:color/darker_gray"
        android:textColor="@color/text_title" />

    <TextView
        android:id="@+id/question_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingRight="20dp"
        android:text="@string/study_edit_question"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_title" />

    <EditText
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        android:layout_toEndOf="@+id/button_cancel"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/study_edit_question_hint"
        android:inputType="textMultiLine"
        android:maxLines="8" >
         <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/dummy"
        android:text="@string/dialog_cancel" />

    <Space
        android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/dummy"
        android:text="@string/dialog_ok" />

</RelativeLayout>